--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,6 @@ body {
     width: 100%;
     display: flex;
     flex-direction: row;
-    /* justify-content: center; */
     background-color: #B6EAEE;
     /* background-color:black; */
 }
@@ -26,26 +25,29 @@ body {
 }
 
 #runBtn {
-    /* margin-left: 20%; */
-    /* background-color: #EBF3FF; */
-    border: #EBF3FF 3px solid;
-    margin: 8px auto 8px 400px;
-    color: #227C7B;
-    /* margin: 10px 10px 10px 0px; */
-    background-color: white;
-    border-radius: 15px;
-    /* padding: 50px; */
-    /* margin-left:50px; */
+    border-radius: 7px;
+    padding: 5px 10px;
+    height: fit-content;
+    width: fit-content;
+    margin: auto;
     cursor: pointer;
+    outline: none;
+    border: none;
+    border: white 1px solid;
+    color: #227C7B;
+}
+#runBtn:hover {
+    background: #B6EAEE;
+}
+#runBtn:active {
+    background: #2e3440;
 }
 
 #btnContainer {
     display: flex;
-    width: 100%;
     flex-direction: row;
     background-color: #B6EAEE;
-    justify-content: center;
-    margin-right: 35%;
+    /* justify-content: center; */
     padding: 10px;
 }
 
@@ -54,7 +56,7 @@ body {
     color: #227C7B;
     padding: 5px;
     cursor: pointer;
-
+    font-size: 15px;
 }
 
 .toggle-btn:hover {
@@ -72,7 +74,7 @@ body {
 }
 
 .active {
-    background-color: black;
+    background-color: #2e3440;
 }
 
 #bodyContainer {
@@ -107,9 +109,14 @@ hr {
 }
 
 .theme-toggle {
-    position: absolute;
-    margin: auto;
-    top: 12px;right: 10px;
+    margin: auto 0;
     cursor: pointer;
     margin-right: 15px;
+    color: #2e3440;
+}
+
+@media (max-width: 768px) {
+    #logo {
+        font-size:17px;
+    }
 }
