--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@ body {
     /* background-color:black; */
 }
 
+#headerIcons {
+    display: flex;
+}
+
 #logo {
     /* padding-right: 50px; */
     font-weight: bold;
@@ -25,7 +29,7 @@ body {
     /* margin-left: 20%; */
     /* background-color: #EBF3FF; */
     border: #EBF3FF 3px solid;
-    margin: 8px auto 8px 400px;
+    margin: 8px 100px 8px 400px;
     color: #227C7B;
     /* margin: 10px 10px 10px 0px; */
     background-color: white;
@@ -98,4 +102,57 @@ iframe {
 
 hr {
     background-color: #227C7B;
+}
+
+@media only screen and (max-width: 576px) {
+    #header {
+        flex-direction: column;
+        padding: 10px 0;
+        align-items: center;
+        box-sizing: border-box;
+    }
+
+    #logo {
+        font-size: 170%;
+    }
+
+    #headerIcons {
+        flex-direction: row-reverse;
+        flex-wrap: wrap;
+        margin: 2vw auto 1vw;
+        width: 67vw;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .toggle-btn {
+        font-size: clamp(14px, 3vw, 16px);
+    }
+
+    #runBtn {
+        margin: 10px 0;
+    }
+
+    #btnContainer {
+        width: auto;
+        margin: 0;
+        padding: 0;
+    }
+
+    #bodyContainer {
+        flex-direction: column;
+        height: auto;
+    }
+
+    textarea {
+        height: 50vh;
+        width: 100%;
+        border: none;
+        border-bottom: 1px solid #227C7B;
+    }
+
+    iframe {
+        width: 100%;
+        height: 50vh;
+    }
 }
